feat: add api controller generation
