# src/api.yaml
@@ -8,6 +8,7 @@ info:
     email: david@logoui.co.il
 tags:
   - name: WeatherForecast
+    description: TBD
 paths:
   /WeatherForecast:
     get:
@@ -64,15 +65,7 @@ paths:
           application/json:
             schema:
               type: string
-              format: date-time
-          text/json:
-            schema:
-              type: string
-              format: date-time
-          application/*+json:
-            schema:
-              type: string
-              format: date-time
+              format: date
       responses:
         '200':
           description: Success
@@ -107,7 +100,7 @@ paths:
           required: true
           schema:
             type: string
-            format: date-time
+            format: date
       responses:
         '200':
           description: Success
@@ -128,14 +121,10 @@ components:
       properties:
         date:
           type: string
-          format: date-time
+          format: date
         temperatureC:
           type: integer
           format: int32
-        temperatureF:
-          type: integer
-          format: int32
-          readOnly: true
         summary:
           type: string
           nullable: true
